--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p class="lead">Hello, my name is Bagus. I'm doing SharePoint. Chek my blog <a class="btn btn-info" href="/blog/">here</a></p>
               <p>You can also contact me as {{site.email}} or twitter @{{site.twitter_username}}</p>
             <p class="lead">
-              <a href="#" class="btn btn-default">Sample work</a>
+              <a href="https://github.com/BagusIlman" class="btn btn-default">Sample work</a>
             </p>
           </div>
 
